--- a/School.OnlineBookingSystem.csproj
+++ b/School.OnlineBookingSystem.csproj
@@ -98,11 +98,15 @@
     </Compile>
     <Compile Include="Common\DelegateCommand.cs" />
     <Compile Include="Handlers\FileManipulationHandler.cs" />
+    <Compile Include="Models\Account.cs" />
+    <Compile Include="Models\AccountCatalog.cs" />
     <Compile Include="Models\Booking.cs" />
     <Compile Include="Models\BookingCatalog.cs" />
     <Compile Include="Models\Property.cs" />
     <Compile Include="Models\PropertyCatalog.cs" />
+    <Compile Include="Models\UserSingleton.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="ViewModels\LoginPageVm.cs" />
     <Compile Include="ViewModels\MainPageVM.cs" />
     <Compile Include="ViewModels\PropertiesPageVm.cs" />
     <Compile Include="ViewModels\SearchPageVm.cs" />
@@ -111,6 +115,9 @@
     </Compile>
     <Compile Include="Views\FrontPage.xaml.cs">
       <DependentUpon>FrontPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\LoginPage.xaml.cs">
+      <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -151,6 +158,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\FrontPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\LoginPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
