--- a/School.OnlineBookingSystem.csproj
+++ b/School.OnlineBookingSystem.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Common\StringValue.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\AccountCatalog.cs" />
+    <Compile Include="Models\Apartment.cs" />
     <Compile Include="Models\Booking.cs" />
     <Compile Include="Models\BookingCatalog.cs" />
     <Compile Include="Models\Property.cs" />
