--- a/School.OnlineBookingSystem.csproj
+++ b/School.OnlineBookingSystem.csproj
@@ -100,21 +100,22 @@
     <Compile Include="Common\CatalogSingleton.cs" />
     <Compile Include="Common\SpecialStrings.cs" />
     <Compile Include="Common\StringValue.cs" />
+    <Compile Include="Common\TransportSingleton.cs" />
     <Compile Include="Models\Account.cs" />
-    <Compile Include="Models\AccountCatalog.cs" />
     <Compile Include="Models\Booking.cs" />
-    <Compile Include="Models\BookingCatalog.cs" />
     <Compile Include="Models\Property.cs" />
-    <Compile Include="Models\PropertyCatalog.cs" />
     <Compile Include="Models\TypeOfApartment.cs" />
     <Compile Include="Models\UserSingleton.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="Models\AccountCatalog.cs" />
+    <Compile Include="Models\BookingCatalog.cs" />
     <Compile Include="ViewModels\CreateBookingVm.cs" />
     <Compile Include="ViewModels\FrontPageVm.cs" />
     <Compile Include="ViewModels\LoginPageVm.cs" />
     <Compile Include="ViewModels\MainFrameSingleton.cs" />
     <Compile Include="ViewModels\MainPageVM.cs" />
     <Compile Include="ViewModels\PropertiesPageVm.cs" />
+    <Compile Include="Models\PropertyCatalog.cs" />
     <Compile Include="ViewModels\RegisterPageVm.cs" />
     <Compile Include="ViewModels\SearchPageVm.cs" />
     <Compile Include="Views\CreateBookingView.xaml.cs">
