--- a/School.OnlineBookingSystem.csproj
+++ b/School.OnlineBookingSystem.csproj
@@ -102,7 +102,6 @@
     <Compile Include="Common\StringValue.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\AccountCatalog.cs" />
-    <Compile Include="Models\Apartment.cs" />
     <Compile Include="Models\Booking.cs" />
     <Compile Include="Models\BookingCatalog.cs" />
     <Compile Include="Models\Property.cs" />
@@ -118,6 +117,9 @@
     <Compile Include="ViewModels\PropertiesPageVm.cs" />
     <Compile Include="ViewModels\RegisterPageVm.cs" />
     <Compile Include="ViewModels\SearchPageVm.cs" />
+    <Compile Include="Views\AboutPage.xaml.cs">
+      <DependentUpon>AboutPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\CreateBookingView.xaml.cs">
       <DependentUpon>CreateBookingView.xaml</DependentUpon>
     </Compile>
@@ -151,6 +153,9 @@
     <None Include="School.OnlineBookingSystem_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\eiffel-tower-france-paris-buildings-lights-1680x1050-wallpaper.jpg" />
+    <Content Include="Assets\europeflyout.jpg" />
+    <Content Include="Assets\WorldWide.jpg" />
     <Content Include="Images\1.jpg" />
     <Content Include="Images\2.jpg" />
     <Content Include="Images\3.jpg" />
@@ -162,8 +167,15 @@
     <Content Include="Images\france.jpg" />
     <Content Include="Images\SkiResorts\BeaverCreekLodge\beavercreek_beavercreeklodge6.jpg" />
     <Content Include="Images\SkiResorts\BeaverCreekLodge\beavercreek_beavercreeklodge7.jpg" />
-    <Content Include="Images\SkiResorts\CharetatBeaverCreek\bc_charteratbeavercreek1_wynbcvl.jpg" />
-    <Content Include="Images\SkiResorts\CharetatBeaverCreek\bc_charteratbeavercreek9_wynbcvl.jpg" />
+    <Content Include="Images\SkiResorts\CharetatBeaverCreek\ch.jpg" />
+    <Content Include="Images\SkiResorts\CharetatBeaverCreek\ch1.jpg" />
+    <Content Include="Images\SkiResorts\CharetatBeaverCreek\ch2.jpg" />
+    <Content Include="Images\SkiResorts\CharetatBeaverCreek\ch3.jpg" />
+    <Content Include="Images\SkiResorts\CharetatBeaverCreek\ch4.jpg" />
+    <Content Include="Images\SkiResorts\CharetatBeaverCreek\ch5.jpg" />
+    <Content Include="Images\SkiResorts\CharetatBeaverCreek\ch6.jpg" />
+    <Content Include="Images\SkiResorts\CharetatBeaverCreek\ch7.jpg" />
+    <Content Include="Images\SkiResorts\ElkhornLodge\jacksonhole_hotelterra8.jpg" />
     <Content Include="Images\SkiResorts\HarischHotelWeissesRossl\kit_hotelweisses2.jpg" />
     <Content Include="Images\SkiResorts\HarischHotelWeissesRossl\kit_hotelweisses5.jpg" />
     <Content Include="Images\SkiResorts\ElkhornLodge\beavercreek_elkhornlodge3.jpg" />
@@ -171,6 +183,10 @@
     <Content Include="Images\SkiResorts\BordersLodge\bc_borderslodge6_wynbcvl.jpg" />
     <Content Include="Images\SkiResorts\PinesLodgeARockResort\beavercreek_pineslodge4.jpg" />
     <Content Include="Images\SkiResorts\PinesLodgeARockResort\beavercreek_pineslodge5.jpg" />
+    <Content Include="Images\SkiResorts\RitzCarltonBeaverCreek\bc_ritzcarltonbachelorgulch7_ritzbach.jpg" />
+    <Content Include="Images\SkiResorts\RitzCarltonBeaverCreek\bc_ritzcarltonbachelorgulch9_ritzbach.jpg" />
+    <Content Include="Images\SkiResorts\stjamesplace\beavercreek_stjamesplace5_vrbc.jpg" />
+    <Content Include="Images\SkiResorts\stjamesplace\beavercreek_stjamesplace6_vrbc.jpg" />
     <Content Include="Images\SkiResorts\TownPointe\parkcity_townpointe1.jpg" />
     <Content Include="Images\SkiResorts\TownPointe\parkcity_townpointe2.jpg" />
     <Content Include="Images\SkiResorts\TownPointe\parkcity_townpointe3.jpg" />
@@ -185,11 +201,6 @@
     <Content Include="Images\SkiResorts\BeaverCreekLodge\beavercreek_beavercreeklodge2.jpg" />
     <Content Include="Images\SkiResorts\BeaverCreekLodge\beavercreek_beavercreeklodge3.jpg" />
     <Content Include="Images\SkiResorts\BeaverCreekLodge\beavercreek_beavercreeklodge4.jpg" />
-    <Content Include="Images\SkiResorts\CharetatBeaverCreek\bc_charteratbeavercreek10_wynbcvl.jpg" />
-    <Content Include="Images\SkiResorts\CharetatBeaverCreek\bc_charteratbeavercreek3_wynbcvl.jpg" />
-    <Content Include="Images\SkiResorts\CharetatBeaverCreek\bc_charteratbeavercreek5_wynbcvl.jpg" />
-    <Content Include="Images\SkiResorts\CharetatBeaverCreek\bc_charteratbeavercreek6_wynbcvl.jpg" />
-    <Content Include="Images\SkiResorts\CharetatBeaverCreek\bc_charteratbeavercreek8_wynbcvl.jpg" />
     <Content Include="Images\SkiResorts\HarischHotelWeissesRossl\kit_hotelweisses1.jpg" />
     <Content Include="Images\SkiResorts\HarischHotelWeissesRossl\kit_hotelweisses6.jpg" />
     <Content Include="Images\SkiResorts\HarischHotelWeissesRossl\kit_hotelweisses7.jpg" />
@@ -210,16 +221,16 @@
     <Content Include="Images\SkiResorts\BordersLodge\bc_borderslodge2_wynbcvl.jpg" />
     <Content Include="Images\SkiResorts\BordersLodge\bc_borderslodge3_wynbcvl.jpg" />
     <Content Include="Images\SkiResorts\BordersLodge\bc_borderslodge5_wynbcvl.jpg" />
-    <Content Include="Images\SkiResorts\Ritz Carlton Beaver Creek\bc_ritzcarltonbachelorgulch10_ritzbach.jpg" />
-    <Content Include="Images\SkiResorts\Ritz Carlton Beaver Creek\bc_ritzcarltonbachelorgulch1_ritzbach.jpg" />
-    <Content Include="Images\SkiResorts\Ritz Carlton Beaver Creek\bc_ritzcarltonbachelorgulch2_ritzbach.jpg" />
-    <Content Include="Images\SkiResorts\Ritz Carlton Beaver Creek\bc_ritzcarltonbachelorgulch3_ritzbach.jpg" />
-    <Content Include="Images\SkiResorts\Ritz Carlton Beaver Creek\bc_ritzcarltonbachelorgulch6_ritzbach.jpg" />
-    <Content Include="Images\SkiResorts\rusmus%27s Villa\beavercreek_stjamesplace1_vrbc.jpg" />
-    <Content Include="Images\SkiResorts\rusmus%27s Villa\beavercreek_stjamesplace2_vrbc.jpg" />
-    <Content Include="Images\SkiResorts\rusmus%27s Villa\beavercreek_stjamesplace3_vrbc.jpg" />
-    <Content Include="Images\SkiResorts\rusmus%27s Villa\beavercreek_stjamesplace4_vrbc.jpg" />
-    <Content Include="Images\SkiResorts\rusmus%27s Villa\beavercreek_stjamesplace7_vrbc.jpg" />
+    <Content Include="Images\SkiResorts\RitzCarltonBeaverCreek\bc_ritzcarltonbachelorgulch10_ritzbach.jpg" />
+    <Content Include="Images\SkiResorts\RitzCarltonBeaverCreek\bc_ritzcarltonbachelorgulch1_ritzbach.jpg" />
+    <Content Include="Images\SkiResorts\RitzCarltonBeaverCreek\bc_ritzcarltonbachelorgulch2_ritzbach.jpg" />
+    <Content Include="Images\SkiResorts\RitzCarltonBeaverCreek\bc_ritzcarltonbachelorgulch3_ritzbach.jpg" />
+    <Content Include="Images\SkiResorts\RitzCarltonBeaverCreek\bc_ritzcarltonbachelorgulch6_ritzbach.jpg" />
+    <Content Include="Images\SkiResorts\stjamesplace\beavercreek_stjamesplace1_vrbc.jpg" />
+    <Content Include="Images\SkiResorts\stjamesplace\beavercreek_stjamesplace2_vrbc.jpg" />
+    <Content Include="Images\SkiResorts\stjamesplace\beavercreek_stjamesplace3_vrbc.jpg" />
+    <Content Include="Images\SkiResorts\stjamesplace\beavercreek_stjamesplace4_vrbc.jpg" />
+    <Content Include="Images\SkiResorts\stjamesplace\beavercreek_stjamesplace7_vrbc.jpg" />
     <Content Include="Images\SkiResorts\Tansu%27s Villa\valthorens_kohlnorhotel1.jpg" />
     <Content Include="Images\SkiResorts\Tansu%27s Villa\valthorens_kohlnorhotel10.jpg" />
     <Content Include="Images\SkiResorts\Tansu%27s Villa\valthorens_kohlnorhotel4.jpg" />
@@ -239,6 +250,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Views\AboutPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\CreateBookingView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
